<resources>
    <string name="app_name">Disrupty</string>
    <string name="action_settings">Settings</string>
    <string name="action_disruption_check_log">Disruption check log</string>


    <!-- Navigation menu labels -->
    <string name="nav_create_subscription">New subscription</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_disruption_check_log">Disruption check log</string>
    <string name="nav_disruption_check_details">Disruption check details</string>


    <!-- Generic -->
    <string name="station_from">From station</string>
    <string name="station_to">To station</string>

    <string name="time">Time</string>
    <string name="time_from">From</string>
    <string name="time_to">to</string>


    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="confirm_positive">Yes</string>
    <string name="confirm_negative">No</string>

    <string name="search">Search</string>

    <!-- Main page -->
    <string name="no_subscriptions_setup">No subscriptions setup yet.</string>


    <!-- Create subscription page -->

    <string name="time_from_default_value">6:00</string>
    <string name="time_to_default_value">10:00</string>

    <string name="delete_confirmation">Are you sure you permanently want to delete this subscription?</string>
    <string name="delete_failure">There was an issue deleting this subscription</string>
    <string name="delete_success">Subscription deleted</string>


    <!-- Preferences page -->
    <string name="pref_cat_general">General</string>

    <string name="pref_cat_api">NS API settings</string>
    <string name="pref_api_username">Username</string>
    <string name="pref_api_username_summary">Username for the NS API: %s</string>
    <string name="pref_api_password">Password</string>
    <string name="pref_api_password_summary">Password for the NS API: %s</string>
    <string name="pref_api_pass_not_set">Not setup</string>
    <string name="pref_api_pass_set">Set!</string>

    <!-- Category Disruption configuration properties-->
    <string name="pref_cat_disruption">Disruption configuration</string>
    <string name="pref_disruption_delay_window_title">Acceptable departure delay</string>
    <string name="pref_disruption_delay_window_summary">Minimum number of minutes before a delayed departure time is considered disrupted: %s minutes.</string>
    <integer name="default_delay_disruption_window_in_minutes">3</integer>

    <!-- Disruption check log -->
    <string name="trigger_check">Trigger disruption check</string>

    <string name="disruption_check_status_success">OK</string>
    <string name="disruption_check_status_failure">DISRUPTED</string>
    <string name="disruption_check_success">success</string>
    <string name="disruption_check_failure">failure</string>

    <string name="disruption_check_detail_missing_id">Unable to load disruption check details for empty disruption check id</string>

    <!-- Disruption checks -->
    <string name="disruption_check_no_network">No network connectivity, unable to check disruptions.</string>

    <!-- Days -->
    <string name="days">Days</string>
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>

    <!-- Notifications -->
    <string name="notify_disruption_detected_title">Route disrupted</string>
    <string name="notify_disruption_detected_content">%1$s - %2$s [%3$s] : %4$s</string>
    <string name="notify_disruption_resolved_title">Disruption resolved</string>
    <string name="notify_disruption_resolved_content">%1$s - %2$s</string>

    <!-- NS related messages-->
    <string name="ns_authentication_failure">Authentication failure with the NS api, did you correctly setup your account?</string>
    <string name="ns_stations_list_failure">Failed to get stations list from NS: %1$s</string>

</resources>
